--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ h3 {
 }
 
 h4 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
     font-size: 12pt;
     text-align: center;
 }
@@ -29,7 +29,7 @@ h5 {
 }
 
 h6 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Georgia, Times, 'Times New Roman', serif;
     font-size: 12pt;
     text-align: center;
 }
