--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
-header {
+.header {
     overflow: hidden;
     background-color: #f1f1f1;
     padding: 20px 10px;
 }
   
-header a {
+.header a {
     float: left;
     color: black;
     text-align: center;
@@ -15,7 +15,7 @@ header a {
     border-radius: 4px;
 }
 
-header a:hover {
+.header a:hover {
     background-color: #ddd;
     color: black;
 }
