--- a/main.css
+++ b/main.css
@@ -11,8 +11,9 @@ body {
 }
 
 .header a , .footer a{
+    display: inline-block;
     color: black;
-    padding: 12px;
+    padding: 10px;
     text-decoration: none;
     font-size: 18px;
     border-radius: 4px;
