--- a/main.css
+++ b/main.css
@@ -30,45 +30,19 @@ body {
     color: white;
 }
 
-h1 {
-    font-family: sans-serif;
-    font-size: 12pt;
+/* Fonts:
+
+sans-serif
+'Times New Roman', Times, serif
+Arial, Helvetica, sans-serif
+Verdana, Tahoma, sans-serif
+'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+Georgia, Times, 'Times New Roman', serif
+
+*/
+
+h1, h2, h3, h4, h5, h6{
+    font-family: Times;
     text-align: center;
     color: #9e1922;
 }
-
-h2 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 12pt;
-    text-align: center;
-    color: #9e1922;
-}
-
-h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12pt;
-    text-align: center;
-    color: #9e1922;
-}
-
-h4 {
-    font-family: Verdana, Tahoma, sans-serif;
-    font-size: 12pt;
-    text-align: center;
-    color: #9e1922;
-}
-
-h5 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 12pt;
-    text-align: center;
-    color: #9e1922;
-}
-
-h6 {
-    font-family: Georgia, Times, 'Times New Roman', serif;
-    font-size: 12pt;
-    text-align: center;
-    color: #9e1922;
-}
-
