--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 /* Change background image to reflect purpose/scope of project */
+
 body {
     background: #ffdab9;
 }
@@ -28,6 +29,20 @@ body {
 .header a:active , .footer a:active {
     background-color: blue;
     color: white;
+}
+
+.member {
+    text-align: center;
+    margin-bottom: 1.5cm;
+}
+
+.member p {
+    text-align: left;
+    text-indent: 5%;
+}
+
+.anchor {
+    text-align: center;
 }
 
 /* Fonts:
