--- a/main.css
+++ b/main.css
@@ -4,14 +4,14 @@ body {
     background: #ffdab9;
 }
 
-.header , .footer{
+.header , .footer {
     text-align: center;
     overflow: hidden;
     background-color: darkgreen;
     padding: 20px 10px;
 }
 
-.header a , .footer a{
+.header a , .footer a {
     display: inline-block;
     color: black;
     padding: 10px;
@@ -36,7 +36,7 @@ body {
     margin-bottom: 1.5cm;
 }
 
-.member p {
+.member p, .indent {
     text-align: left;
     text-indent: 5%;
 }
@@ -45,6 +45,9 @@ body {
     text-align: center;
 }
 
+li {
+    margin-bottom: 20px;
+}
 /* Fonts:
 
 sans-serif
@@ -56,7 +59,7 @@ Georgia, Times, 'Times New Roman', serif
 
 */
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
     font-family: Times;
     text-align: center;
     color: #9e1922;
